# mechamind-os-2.0

./: .gitignore  FILE_UPLOAD_LIMITS.md  INTEGRATION_STATUS.md  README.md  apply_mechamind_repairs.py  check_backend_imports.py  docker-compose.yml  inventory_projects.py  package-lock.json  prometheus.yml  shared_files.md  test_upload_limits.py
backend/: Dockerfile  alembic.ini  boiler_manual.txt  check_users.py  cnc_manual.txt  compressor_manual.txt  create_admin.py  debug_ai.py  docker-compose.yml  find_model.py  fix_email.py  make_admin.py  mock_pump_manual.txt  osha_safety.txt  pyproject.toml  pytest.ini  seed_all.py  seed_documents.py  test_ai.py  test_doc_api.py  test_pass.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: celery_app.py  config.py  embeddings.py  exception_handlers.py  exceptions.py  jwt.py  llm.py  logging.py  nlp.py  ocr.py  policy.py  rate_limit.py  redis.py  redis_rbac.py  redis_security.py  security.py  storage.py  telemetry.py
backend/app/db/: base_class.py  session.py
backend/app/dependencies/: auth.py  db.py  rbac.py
backend/app/middleware/: auth.py  request_id.py
backend/app/models/: __init__.py  analytics.py  asset_master.py  audit_log.py  brain.py  building.py  compliance.py  component.py  copilot.py  department.py  document.py  email_verification.py  entity.py  enums.py  extraction.py  factory.py  integration.py  inventory.py  iot.py  knowledge.py  learning.py  login_history.py  machine.py  maintenance.py  mlops.py  organization.py  password_reset.py  permission.py  prediction.py  purchase_order.py  refresh_token.py  relationship.py  risk_health.py  role.py  role_permission.py  security.py  supplier.py  team.py  user.py  user_dept_role.py  (+7 more)
backend/app/repositories/: analytics.py  audit.py  base.py  compliance.py  component.py  department.py  document.py  entity.py  extraction.py  factory.py  hierarchy.py  integration.py  iot.py  machine.py  maintenance.py  mlops.py  organization.py  permission.py  prediction.py  relationship.py  risk_health.py  role.py  security.py  session.py  team.py  user.py  vision.py  workflow.py
backend/app/schemas/: admin.py  analytics.py  auth.py  base.py  brain.py  compliance.py  component.py  copilot.py  department.py  document.py  entity.py  extraction.py  factory.py  hierarchy.py  integration.py  iot.py  knowledge.py  learning.py  machine.py  mlops.py  (+13 more)
backend/migrations/: env.py
backend/scripts/: generate_enterprise.py
(+348 files in other folders)
